@@ -1,6 +1,7 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.fluidpressureandflow.watertower.model;
 
+import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.piccolophet.nodes.VelocitySensor;
 import edu.colorado.phet.fluidpressureandflow.common.model.VelocitySensorContext;
@@ -13,9 +14,13 @@ import edu.colorado.phet.fluidpressureandflow.common.model.VelocitySensorContext
 public class FPAFVelocitySensor extends VelocitySensor {
 
     public final SimpleObserver updateValue;
+    public final IUserComponent component;
+    public final VelocitySensorContext context;
 
-    public FPAFVelocitySensor( final VelocitySensorContext context, double x, double y ) {
+    public FPAFVelocitySensor( IUserComponent component, final VelocitySensorContext context, double x, double y ) {
         super( x, y );
+        this.component = component;
+        this.context = context;
         updateValue = new SimpleObserver() {
             public void update() {
                 value.set( context.getVelocity( position.get().getX(), position.get().getY() ) );
